# markdown_lt

./: .gitignore  LICENSE  README.md  dict.txt  setup.cfg  setup.py
.circleci/: config.yml
markdown_lt/: __init__.py  __main__.py  ast.py  astmatcher.py  cli.py  linter.py  matcher.py  utils.py
markdown_lt/tests/: markdown_lt_test.py  spelling_test.py
scripts/: deploy.sh  format.sh  install_hooks.sh  lint.sh  test.sh
scripts/hooks/: pre-commit  pre-push
