[options]
python_requires = >= 3.8
test_suite = tests
install_requires =
    mistune == 2.0.0a6
    language-tool-python == 2.5.2

[options.extras_require]
dev =
    yapf
    pylint
    pytest
    coverage

[yapf]
based_on_style = pep8
column_limit = 120

[pycodestyle]
max-line-length = 120

[pylint]
disable = too-many-arguments,
          too-few-public-methods,
          broad-except,
          too-many-branches,
          duplicate-code
